change to get title by font size
change to get title by font size
add more unittest